fix(MT): 方法部件部分场景下未排序，执行阶段为空时，给默认值：EXECUTE